<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background0"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activity.RegiserActivity">

    <include
        android:id="@+id/register_toolbar"
        layout="@layout/toolbar_transparent" />

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:background="#efff">

        <LinearLayout
            android:id="@+id/user_register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="20dp">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:fontFamily="sans-serif"
                android:hint="@string/register_username_hint"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true"
                app:met_floatingLabel="normal"
                app:met_maxCharacters="11"
                app:met_minCharacters="11" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:hint="@string/register_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                app:met_floatingLabel="normal"
                app:met_maxCharacters="20"
                app:met_minCharacters="6" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/register_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:hint="@string/register_confirm_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                app:met_floatingLabel="normal"
                app:met_maxCharacters="20"
                app:met_minCharacters="6" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/register_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif"
                android:hint="@string/register_nickname_hint"
                android:maxLines="1"
                android:singleLine="true"
                app:met_floatingLabel="normal" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/register_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:hint="@string/register_phone_number_hint"
                android:imeActionId="@integer/registerImeActionId"
                android:imeActionLabel="register"
                android:imeOptions="actionUnspecified"
                android:inputType="textPhonetic"
                android:maxLines="1"
                android:singleLine="true"
                app:met_floatingLabel="normal" />

            <Button
                android:id="@+id/create_user"
                style="?android:textAppearanceButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:padding="8dp"
                android:text="@string/register_sign_up_button"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="#fff"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>